--- a/ansible/fiscalismia-backend/roles_deployment/2-check-docker-container/tasks/main.yaml
+++ b/ansible/fiscalismia-backend/roles_deployment/2-check-docker-container/tasks/main.yaml
@@ -6,7 +6,7 @@
 - name: Confirm docker container is running
   ansible.builtin.shell: "docker ps"
   register: docker_ps_output
-  become: yes
+  become: true
 - ansible.builtin.debug: msg={{ docker_ps_output.stdout_lines }}
 
 - name: Confirm health check of container succeeds
@@ -24,7 +24,7 @@
 
 - name: Inspect deployed container to get its build version
   ansible.builtin.shell: "docker inspect -f '{% raw %}{{json .Config.Env}}{% endraw %}' {{ docker_remote_container_name }}"
-  become: yes
+  become: true
   register: container_env_vars
   changed_when: false
 -  ansible.builtin.debug:
