--- a/ansible/fiscalismia-backend/roles_provisioning/1-setup-vscode-ssh-remoting/tasks/main.yaml
+++ b/ansible/fiscalismia-backend/roles_provisioning/1-setup-vscode-ssh-remoting/tasks/main.yaml
@@ -19,21 +19,21 @@
   # this checks for a public key with eliptic curve ed25519 encryption which we use for linux machine key pairs
   ansible.builtin.shell: "cat /home/{{ linux_user }}/.ssh/authorized_keys | grep ssh-ed25519"
   register: authorized_keys_output
-  become: yes
+  become: true
 - ansible.builtin.debug: msg={{ authorized_keys_output.stdout_lines }}
 
 - name: Allow TcpForwarding in sshd_config
   ansible.builtin.shell: "sed -i 's/AllowTcpForwarding no/AllowTcpForwarding yes/g' /etc/ssh/sshd_config"
-  become: yes
+  become: true
 
 - name: Confirm sshd_config setup is correct
   ansible.builtin.shell: "cat /etc/ssh/sshd_config | grep AllowTcpForwarding"
   register: sshd_config_output
-  become: yes
+  become: true
 - ansible.builtin.debug: msg={{ sshd_config_output.stdout_lines }}
 
 - name: Restart ssh daemon to sync sshd_config
   ansible.builtin.systemd_service:
     name: sshd
     state: restarted
-  become: yes
+  become: true
