Properly Configures basic Firewall Rules

--- a/terraform/hetzner-cloud/.config/default.labels.yml
+++ b/terraform/hetzner-cloud/.config/default.labels.yml
@@ -1,3 +1,2 @@
-application: fiscalismia
-github_repository: fiscalismia-infrastructure
+repository: fiscalismia-infrastructure
 provisioned_by: terraform
