--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,7 +24,7 @@ jobs:
       uses: actions/checkout@v5
 
     - name: Set up Terraform
-    - uses: hashicorp/setup-terraform@v3.1.7
+      uses: hashicorp/setup-terraform@v3.1.2
       with:
         terraform_version: "1.13.4" # comment out for latest version
 
@@ -38,6 +38,8 @@ jobs:
 
     - name: Write terraform planfile
       run: |
+        aws sts get-caller-identity
+
         which terraform
         terraform -v
         cd ${GITHUB_WORKSPACE}/terraform/aws
