--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -36,6 +36,7 @@ jobs:
         HCLOUD_TOKEN: ${{ secrets.HCLOUD_TOKEN }}
       run: |
         cd ${GITHUB_WORKSPACE}/terraform/hetzner-cloud
+        if ! [ -z "${HCLOUD_TOKEN}" ]; then echo hcloud token defined; else echo "hcloud token not defined"; fi
         terraform init
         terraform plan \
           -out ${GITHUB_WORKSPACE}/planfiles/hcloud.plan
@@ -126,7 +127,7 @@ jobs:
     - name: Create Planfiles directory for artifacts
       run: mkdir -p ${GITHUB_WORKSPACE}/planfiles
 
-    - name: Generate terraform planfile for AWS
+    - name: Generate terraform planfile for dynamic AWS resources
       run: |
         aws sts get-caller-identity
 
@@ -136,6 +137,14 @@ jobs:
           -var='secret_api_key=${{ secrets.API_GATEWAY_SECRET_KEY }}' \
           -var='test_sheet_url=${{ secrets.GOOGLE_DOCS_TEST_URL }}' \
           -var='forecasted_budget_notification_email=${{ secrets.BUDGET_NOTIFICATION_EMAIL }}' \
+          -target=module.route_53_dns \
+          -target=module.api_gateway \
+          -target=module.lambda_image_processing \
+          -target=module.lambda_raw_data_etl \
+          -target=module.infrastructure_lambdas \
+          -target=module.cost_budget_alarms \
+          -target=module.sns_topics \
+          -target=module.cloudwatch_metric_alarms \
           -out ${GITHUB_WORKSPACE}/planfiles/aws.plan
 
     - name: Upload AWS Planfile Artifact
@@ -145,3 +154,27 @@ jobs:
         retention-days: 1
         path: |
           planfiles/aws*
+
+  terraform-review-aws:
+    needs:
+      - terraform-plan-aws
+
+    runs-on: ubuntu-latest
+
+    permissions:
+      actions: read
+
+    steps:
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v3.1.2
+
+    - name: Download Planfile Artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: aws-planfile
+        path: planfiles/
+
+    - name: Review AWS planfile
+      run: |
+        cd ${GITHUB_WORKSPACE}/planfiles/
+        terraform show aws.plan
