--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -28,6 +28,14 @@ jobs:
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v3.1.2
 
+    - name: Configure AWS Credentials with OIDC JWT Token for STS Access to Hcloud Backend Role
+      # See https://docs.github.com/en/actions/concepts/security/openid-connect
+      uses: aws-actions/configure-aws-credentials@v5.1.0
+      with:
+        role-to-assume: arn:aws:iam::010928217051:role/OpenID_Connect_GithubActions_TerraformHcloudBackendAccess
+        role-session-name: TerraformPlanHcloud_STSSession
+        aws-region: ${{ vars.AWS_REGION }}
+
     - name: Create Planfiles directory for artifacts
       run: mkdir -p ${GITHUB_WORKSPACE}/planfiles
 
@@ -116,12 +124,12 @@ jobs:
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v3.1.2
 
-    - name: Configure AWS Credentials with OIDC JWT Token for STS Access
+    - name: Configure AWS Credentials with OIDC JWT Token for STS Access to Terraform Pipeline Role
       # See https://docs.github.com/en/actions/concepts/security/openid-connect
       uses: aws-actions/configure-aws-credentials@v5.1.0
       with:
         role-to-assume: arn:aws:iam::010928217051:role/OpenID_Connect_GithubActions_TerraformPipeline
-        role-session-name: TerraformPlanSTSSession
+        role-session-name: TerraformPlanAWS_STSSession
         aws-region: ${{ vars.AWS_REGION }}
 
     - name: Create Planfiles directory for artifacts
