--- a/.github/workflows/terraform-module-destroyer.yml
+++ b/.github/workflows/terraform-module-destroyer.yml
@@ -1,3 +1,37 @@
 # See https://docs.github.com/en/rest/actions/workflows?apiVersion=2022-11-28#create-a-workflow-dispatch-event
 # See https://docs.github.com/en/webhooks/webhook-events-and-payloads#workflow_dispatch
 # The fine-grained token must have the following permission set: "Actions" repository permissions (write)
+
+name: Fiscalismia Terraform ModuleDestroyer Pipeline
+
+on:
+  workflow_dispatch:
+    inputs:
+      update_functions:
+        description: 'Should modules be destroyed?'
+        required: true
+        default: false
+        type: boolean
+
+jobs:
+  terraform-plan-aws:
+    runs-on: ubuntu-latest
+
+    permissions:
+      id-token: write # for aws OIDC STS tokens to work
+      contents: read
+      actions: read
+
+    steps:
+    - name: Checkout SCM
+      uses: actions/checkout@v5
+
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v3.1.2
+
+    - name: Configure AWS Credentials with OIDC JWT Token for STS Access to Terraform Pipeline Role
+      uses: aws-actions/configure-aws-credentials@v5.1.0
+      with:
+        role-to-assume: arn:aws:iam::010928217051:role/OpenID_Connect_GithubActions_TerraformPipeline
+        role-session-name: TerraformPlanAWS_STSSession
+        aws-region: ${{ vars.AWS_REGION }}
