--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -130,6 +130,7 @@ jobs:
 
   terraform-apply-hcloud:
     environment: prod # requires manual approval before running
+    timeout-minutes: 240 # Cancels the job if it isn't approved within 4 hours
     needs:
       - terraform-review-hcloud
 
@@ -156,7 +157,7 @@ jobs:
     - name: Download Hcloud Planfile Artifact
       uses: actions/download-artifact@v4
       with:
-        name: terraform-planfiles
+        name: hcloud-planfile
         path: planfiles/
 
     - name: Automatically apply hetzner cloud planfile
