--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -167,7 +167,7 @@ jobs:
         aws sts get-caller-identity
 
         cd ${GITHUB_WORKSPACE}/planfiles/
-        terraform apply hcloud.plan --auto-approve
+        terraform apply --auto-approve hcloud.plan
 
   #               __      __   ___  __        __             ___      ___
   #     /\  |  | /__`    |  \ |__  |__) |    /  \ \ /  |\/| |__  |\ |  |
