--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -138,7 +138,6 @@ jobs:
         terraform init
         terraform show ${GITHUB_WORKSPACE}/planfiles/hcloud.plan
 
-
   terraform-apply-hcloud:
     environment: prod # requires manual approval before running
     timeout-minutes: 240 # Cancels the job if it isn't approved within 4 hours
@@ -178,7 +177,7 @@ jobs:
         name: public-hcloud-keys
         path: ~/.ssh/
 
-    - name: Automatically apply hetzner cloud planfile
+    - name: Apply approved and reviewed hetzner cloud planfile
       env:
         HCLOUD_TOKEN: ${{ secrets.HCLOUD_TOKEN }}
       run: |
@@ -193,6 +192,8 @@ jobs:
   #     /\  |  | /__`    |  \ |__  |__) |    /  \ \ /  |\/| |__  |\ |  |
   #    /~~\ |/\| .__/    |__/ |___ |    |___ \__/  |   |  | |___ | \|  |
   terraform-plan-aws:
+    environment: prod # requires manual approval before running, as remote state needs hcloud apply to run first
+    timeout-minutes: 240 # Cancels the job if it isn't approved within 4 hours
     runs-on: ubuntu-latest
 
     permissions:
@@ -270,7 +271,7 @@ jobs:
         role-session-name: TerraformReviewAWS_STSSession
         aws-region: ${{ vars.AWS_REGION }}
 
-    - name: Download Planfile Artifacts
+    - name: Download AWS Planfile Artifact
       uses: actions/download-artifact@v4
       with:
         name: aws-planfile
@@ -283,3 +284,46 @@ jobs:
         cd ${GITHUB_WORKSPACE}/terraform/aws
         terraform init
         terraform show ${GITHUB_WORKSPACE}/planfiles/aws.plan
+
+  terraform-apply-aws:
+    environment: prod # requires manual approval before running
+    timeout-minutes: 240 # Cancels the job if it isn't approved within 4 hours
+    needs:
+      - terraform-review-aws
+
+    runs-on: ubuntu-latest
+
+    permissions:
+      id-token: write # for aws OIDC STS tokens to work
+      contents: read
+      actions: read
+
+    steps:
+    - name: Checkout SCM
+      uses: actions/checkout@v5
+
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v3.1.2
+
+    - name: Configure AWS Credentials with OIDC JWT Token for STS Access to Hcloud Backend Role
+      uses: aws-actions/configure-aws-credentials@v5.1.0
+      with:
+        role-to-assume: arn:aws:iam::010928217051:role/OpenID_Connect_GithubActions_TerraformPipeline
+        role-session-name: TerraformApplyAWS_STSSession
+        aws-region: ${{ vars.AWS_REGION }}
+
+    - name: Download AWS Planfile Artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: aws-planfile
+        path: planfiles/
+
+    - name: Apply approved and reviewed AWS planfile
+      env:
+        HCLOUD_TOKEN: ${{ secrets.HCLOUD_TOKEN }}
+      run: |
+        aws sts get-caller-identity
+
+        cd ${GITHUB_WORKSPACE}/terraform/aws
+        terraform init
+        terraform apply --auto-approve ${GITHUB_WORKSPACE}/planfiles/aws.plan
