Splits AWS and HCLOUD pipelines in two

--- a/.github/workflows/terraform-apply hcloud.yml
+++ b/.github/workflows/terraform-apply hcloud.yml
@@ -1,4 +1,4 @@
-name: Fiscalismia-Infrastructure Terraform Pipeline
+name: Fiscalismia-Infrastructure HCLOUD Terraform Pipeline
 
 on:
   push:
@@ -187,143 +187,3 @@ jobs:
         cd ${GITHUB_WORKSPACE}/terraform/hetzner-cloud
         terraform init
         terraform apply --auto-approve ${GITHUB_WORKSPACE}/planfiles/hcloud.plan
-
-  #               __      __   ___  __        __             ___      ___
-  #     /\  |  | /__`    |  \ |__  |__) |    /  \ \ /  |\/| |__  |\ |  |
-  #    /~~\ |/\| .__/    |__/ |___ |    |___ \__/  |   |  | |___ | \|  |
-  terraform-plan-aws:
-    environment: prod # requires manual approval before running, as remote state needs hcloud apply to run first
-    timeout-minutes: 240 # Cancels the job if it isn't approved within 4 hours
-    runs-on: ubuntu-latest
-
-    permissions:
-      id-token: write # for aws OIDC STS tokens to work
-      contents: read
-      actions: read
-
-    steps:
-    - name: Checkout SCM
-      uses: actions/checkout@v5
-
-    - name: Set up Terraform
-      uses: hashicorp/setup-terraform@v3.1.2
-
-    - name: Configure AWS Credentials with OIDC JWT Token for STS Access to Terraform Pipeline Role
-      uses: aws-actions/configure-aws-credentials@v5.1.0
-      with:
-        role-to-assume: arn:aws:iam::010928217051:role/OpenID_Connect_GithubActions_TerraformPipeline
-        role-session-name: TerraformPlanAWS_STSSession
-        aws-region: ${{ vars.AWS_REGION }}
-
-    - name: Create Planfiles directory for artifacts
-      run: mkdir -p ${GITHUB_WORKSPACE}/planfiles
-
-    - name: Generate terraform planfile for dynamic AWS resources
-      run: |
-        aws sts get-caller-identity
-
-        cd ${GITHUB_WORKSPACE}/terraform/aws
-        terraform init
-        terraform plan \
-          -var='secret_api_key=${{ secrets.API_GATEWAY_SECRET_KEY }}' \
-          -var='test_sheet_url=${{ secrets.GOOGLE_DOCS_TEST_URL }}' \
-          -var='forecasted_budget_notification_email=${{ secrets.BUDGET_NOTIFICATION_EMAIL }}' \
-          -target=module.route_53_dns \
-          -target=module.api_gateway \
-          -target=module.lambda_image_processing \
-          -target=module.lambda_raw_data_etl \
-          -target=module.infrastructure_lambdas \
-          -target=module.cost_budget_alarms \
-          -target=module.sns_topics \
-          -target=module.cloudwatch_metric_alarms \
-          -out ${GITHUB_WORKSPACE}/planfiles/aws.plan
-
-    - name: Upload AWS Planfile Artifact
-      uses: actions/upload-artifact@v5.0.0
-      with:
-        name: aws-planfile
-        retention-days: 1
-        path: |
-          planfiles/aws*
-
-  terraform-review-aws:
-    needs:
-      - terraform-plan-aws
-
-    runs-on: ubuntu-latest
-
-    permissions:
-      id-token: write # for aws OIDC STS tokens to work
-      contents: read
-      actions: read
-
-    steps:
-    - name: Checkout SCM
-      uses: actions/checkout@v5
-
-    - name: Set up Terraform
-      uses: hashicorp/setup-terraform@v3.1.2
-
-    - name: Configure AWS Credentials with OIDC JWT Token for STS Access to Terraform Pipeline Role
-      uses: aws-actions/configure-aws-credentials@v5.1.0
-      with:
-        role-to-assume: arn:aws:iam::010928217051:role/OpenID_Connect_GithubActions_TerraformPipeline
-        role-session-name: TerraformReviewAWS_STSSession
-        aws-region: ${{ vars.AWS_REGION }}
-
-    - name: Download AWS Planfile Artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: aws-planfile
-        path: planfiles/
-
-    - name: Review AWS planfile
-      run: |
-        aws sts get-caller-identity
-
-        cd ${GITHUB_WORKSPACE}/terraform/aws
-        terraform init
-        terraform show ${GITHUB_WORKSPACE}/planfiles/aws.plan
-
-  terraform-apply-aws:
-    environment: prod # requires manual approval before running
-    timeout-minutes: 240 # Cancels the job if it isn't approved within 4 hours
-    needs:
-      - terraform-review-aws
-
-    runs-on: ubuntu-latest
-
-    permissions:
-      id-token: write # for aws OIDC STS tokens to work
-      contents: read
-      actions: read
-
-    steps:
-    - name: Checkout SCM
-      uses: actions/checkout@v5
-
-    - name: Set up Terraform
-      uses: hashicorp/setup-terraform@v3.1.2
-
-    - name: Configure AWS Credentials with OIDC JWT Token for STS Access to Hcloud Backend Role
-      uses: aws-actions/configure-aws-credentials@v5.1.0
-      with:
-        role-to-assume: arn:aws:iam::010928217051:role/OpenID_Connect_GithubActions_TerraformPipeline
-        role-session-name: TerraformApplyAWS_STSSession
-        aws-region: ${{ vars.AWS_REGION }}
-
-    - name: Download AWS Planfile Artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: aws-planfile
-        path: planfiles/
-
-    - name: Apply approved and reviewed AWS planfile
-      env:
-        HCLOUD_TOKEN: ${{ secrets.HCLOUD_TOKEN }}
-      run: |
-        aws sts get-caller-identity
-
-        cd ${GITHUB_WORKSPACE}/terraform/aws
-        terraform init
-        terraform apply --auto-approve ${GITHUB_WORKSPACE}/planfiles/aws.plan
