--- a/.github/workflows/terraform-module-destroyer.yml
+++ b/.github/workflows/terraform-module-destroyer.yml
@@ -42,6 +42,32 @@ jobs:
         role-session-name: TerraformModuleDestroyer_STSSession
         aws-region: ${{ vars.AWS_REGION }}
 
+    - name: Query SSH public keys for Hcloud servers from AWS Secrets Manager
+      env:
+        MASTER_PUBLIC_KEY: fiscalismia-infrastructure-master-key-hcloud.pub
+        PRODUCTION_PUBLIC_KEY: fiscalismia-production-instances-key-hcloud.pub
+        DEMO_PUBLIC_KEY: fiscalismia-demo-instance-key-hcloud.pub
+      run: |
+        mkdir -p ~/.ssh/
+        echo "Querying ${MASTER_PUBLIC_KEY} from AWS"
+        aws secretsmanager get-secret-value \
+          --secret-id ${MASTER_PUBLIC_KEY} \
+          --output text \
+          --query SecretString | jq --raw-output '.public_key' \
+          >> ~/.ssh/${MASTER_PUBLIC_KEY}
+        echo "Querying ${PRODUCTION_PUBLIC_KEY} from AWS"
+        aws secretsmanager get-secret-value \
+          --secret-id ${PRODUCTION_PUBLIC_KEY} \
+          --output text \
+          --query SecretString | jq --raw-output '.public_key' \
+          >> ~/.ssh/${PRODUCTION_PUBLIC_KEY}
+        echo "Querying ${DEMO_PUBLIC_KEY} from AWS"
+        aws secretsmanager get-secret-value \
+          --secret-id ${DEMO_PUBLIC_KEY} \
+          --output text \
+          --query SecretString | jq --raw-output '.public_key' \
+          >> ~/.ssh/${DEMO_PUBLIC_KEY}
+
     - name: Destroy AWS and Hetzner Cloud resources
       env:
         HCLOUD_TOKEN: ${{ secrets.HCLOUD_TOKEN }}
