Adds pipeline failure condition on aws secretsmgr errors

--- a/.github/workflows/terraform-apply hcloud.yml
+++ b/.github/workflows/terraform-apply hcloud.yml
@@ -47,6 +47,7 @@ jobs:
         PRODUCTION_PUBLIC_KEY: fiscalismia-production-instances-key-hcloud.pub
         DEMO_PUBLIC_KEY: fiscalismia-demo-instance-key-hcloud.pub
       run: |
+        set -eou pipefail
         mkdir -p ~/.ssh/
         echo "Querying ${MASTER_PUBLIC_KEY} from AWS"
         aws secretsmanager get-secret-value \
