Preliminary bootstrapping of nat gateway routing

--- a/.github/workflows/terraform-apply hcloud.yml
+++ b/.github/workflows/terraform-apply hcloud.yml
@@ -43,9 +43,10 @@ jobs:
       env:
         MASTER_PUBLIC_KEY: fiscalismia-infrastructure-master-key-hcloud.pub
         LOADBALANCER_PUBLIC_KEY: fiscalismia-loadbalancer-instance-key-hcloud.pub
+        NAT_GATEWAY_PUBLIC_KEY: fiscalismia-nat-gateway-instance-key-hcloud.pub
         MONITORING_PUBLIC_KEY: fiscalismia-monitoring-instance-key-hcloud.pub
-        PRODUCTION_PUBLIC_KEY: fiscalismia-production-instances-key-hcloud.pub
         DEMO_PUBLIC_KEY: fiscalismia-demo-instance-key-hcloud.pub
+        PRODUCTION_PUBLIC_KEY: fiscalismia-production-instances-key-hcloud.pub
       run: |
         set -eou pipefail
         mkdir -p ~/.ssh/
