--- a/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.bastion-host.yml
+++ b/terraform/hetzner-cloud/modules/hcloud_server/user_data/cloud-config.bastion-host.yml
@@ -1,6 +1,6 @@
 #cloud-config
 users:
-  - name: devops
+  - name: fiscalismia
     groups: [users, admin]
     sudo: ALL=(ALL) NOPASSWD:ALL
     shell: /bin/bash
@@ -12,7 +12,9 @@ packages:
   - fail2ban     # SSH brute-force protection
 
 runcmd:
+  # Make yourself known to host
+  - echo "Hello from cloud-config.bastion-host.yml!" > ~/hello_world.txt
+
   # Configure Fail2Ban to protect sshd
   - printf "[sshd]\nenabled = true" > /etc/fail2ban/jail.local
   - systemctl enable --now fail2ban
-  - echo "Hello from cloud-config.yml!" > ~/hello_world.txt
